js262/test/language/expressions/assignmenttargettype/direct-primaryexpression-objectliteral.js


/*---
description: PrimaryExpression ObjectLiteral; Return invalid. (Direct assignment)
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Direct assignment
---*/

$DONOTEVALUATE();

{} = 1;
